[package]
name = "yace"
version = "0.1.0"
edition = "2021"
description = "Yet another CHIP-8 emulator"

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.6", features = ["derive"], optional = true }
crossterm = { version = "0.27.0", optional = true }

[features]
cli = ["clap", "crossterm"]

[[bin]]
name = "yace"
path = "src/bin/cli.rs"
required-features = ["cli"]
