[package]
name = "yace"
version = "0.1.0"
edition = "2021"
description = "Yet another CHIP-8 emulator"
license = "MIT"
repository = "https//github.com/luckasRanarison/yace"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]
categories = ["emulators"]
keywords = ["CHIP-8", "emulator", "wasm"]

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.6", features = ["derive"], optional = true }
crossterm = { version = "0.27.0", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
getrandom = { version = "0.2.10", optional = true, features = ["js"] }

[features]
cli = ["clap", "crossterm"]
wasm = ["wasm-bindgen", "getrandom"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "yace"
path = "src/bin/cli.rs"
required-features = ["cli"]
